[package]
name = "neptune"
version = "0.1.0"
authors = ["ishanjain28 <ishanjain28@gmail.com>"]
edition = "2018"

[dependencies]
volatile = "0.2.3"
spin = "0.4.6"
bootloader = "0.6.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "neptune-x86_64.json"

[build]
target = "neptune-x86_64.json"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
