[package]
name = "neptune"
version = "0.1.0"
authors = ["ishanjain28 <ishanjain28@gmail.com>"]
edition = "2018"

[dependencies]
volatile = "0.2.3"
spin = "0.4.6"
bootloader = "0.6.0"
x86_64 = "0.5.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "neptune-x86_64.json"
# iobase specifies the port address on which device should be available
# iosize specifies the port size
# https://wiki.osdev.org/I/O_Ports#The_list
#
# Redirect serial output to console/terminal stdout
#
# Since, We are getting all test output in console, No need to create window when running tests
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "mon:stdio", "-display", "none"]
# test framework assumes every response code other than 0 to be an error
# Change that default to 33 (0x10 << 1) | 1
test-success-exit-code = 33

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
